--- a/IT03/src/main/resources/IT03.sub03_01-taskform.form
+++ b/IT03/src/main/resources/IT03.sub03_01-taskform.form
@@ -4,4 +4,181 @@
 <property name="name" value="IT03.sub03_01-taskform.form"/>
 <property name="displayMode" value="default"/>
 <property name="status" value="0"/>
+<field position="0" name="form_assign" type="InputText" id="485274673">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;assign (form)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value=""/>
+<property name="outputBinding" value="form/assign"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="1" name="form_change" type="InputText" id="750757477">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;change (form)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value=""/>
+<property name="outputBinding" value="form/change"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="2" name="form_complete" type="InputText" id="37387582">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;complete (form)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value=""/>
+<property name="outputBinding" value="form/complete"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="3" name="form_hostsr" type="InputText" id="703929958">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;hostsr (form)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value=""/>
+<property name="outputBinding" value="form/hostsr"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="4" name="form_iscitrix" type="InputText" id="1975813230">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;iscitrix (form)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value=""/>
+<property name="outputBinding" value="form/iscitrix"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="5" name="form_isgeneral" type="InputText" id="1038429675">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;isgeneral (form)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value=""/>
+<property name="outputBinding" value="form/isgeneral"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="6" name="form_ismgr" type="InputText" id="1282236803">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;ismgr (form)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value=""/>
+<property name="outputBinding" value="form/ismgr"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="7" name="form_othermgr" type="InputText" id="515004142">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;othermgr (form)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value=""/>
+<property name="outputBinding" value="form/othermgr"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="8" name="form_reject" type="InputText" id="905240953">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;reject (form)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value=""/>
+<property name="outputBinding" value="form/reject"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="9" name="form_reply" type="InputText" id="1644861434">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;reply (form)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value=""/>
+<property name="outputBinding" value="form/reply"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="10" name="form_send" type="InputText" id="413092033">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;send (form)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value=""/>
+<property name="outputBinding" value="form/send"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="11" name="form_stage1" type="InputText" id="1446058450">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;stage1 (form)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value=""/>
+<property name="outputBinding" value="form/stage1"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="12" name="form_stage10" type="InputText" id="179007266">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;stage10 (form)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value=""/>
+<property name="outputBinding" value="form/stage10"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="13" name="form_stage11" type="InputText" id="886320572">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;stage11 (form)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value=""/>
+<property name="outputBinding" value="form/stage11"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="14" name="form_stage2" type="InputText" id="93901490">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;stage2 (form)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value=""/>
+<property name="outputBinding" value="form/stage2"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="15" name="form_stage3" type="InputText" id="607827564">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;stage3 (form)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value=""/>
+<property name="outputBinding" value="form/stage3"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="16" name="form_stage4" type="InputText" id="449829885">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;stage4 (form)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value=""/>
+<property name="outputBinding" value="form/stage4"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="17" name="form_stage5" type="InputText" id="566754734">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;stage5 (form)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value=""/>
+<property name="outputBinding" value="form/stage5"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="18" name="form_stage6" type="InputText" id="1576499641">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;stage6 (form)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value=""/>
+<property name="outputBinding" value="form/stage6"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="19" name="form_stage7" type="InputText" id="352434637">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;stage7 (form)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value=""/>
+<property name="outputBinding" value="form/stage7"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="20" name="form_stage8" type="InputText" id="601244415">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;stage8 (form)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value=""/>
+<property name="outputBinding" value="form/stage8"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="21" name="form_stage9" type="InputText" id="1435099665">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;stage9 (form)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value=""/>
+<property name="outputBinding" value="form/stage9"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<dataHolder inputId="" name="#0000A0" type="dataModelerEntry" outId="form" value="esunbank.com.tw.it03.form" id="form"/>
 </form>
