--- a/IT03/src/main/resources/stage10-taskform.form
+++ b/IT03/src/main/resources/stage10-taskform.form
@@ -4,4 +4,181 @@
 <property name="name" value="stage10-taskform.form"/>
 <property name="displayMode" value="default"/>
 <property name="status" value="0"/>
+<field position="0" name="form_assign" type="InputText" id="1156055577">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;assign (form)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="taskform/assign"/>
+<property name="outputBinding" value="taskform/assign"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="1" name="form_change" type="InputText" id="1169527152">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;change (form)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="taskform/change"/>
+<property name="outputBinding" value="taskform/change"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="2" name="form_complete" type="InputText" id="164346773">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;complete (form)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="taskform/complete"/>
+<property name="outputBinding" value="taskform/complete"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="3" name="form_hostsr" type="InputText" id="1708555239">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;hostsr (form)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="taskform/hostsr"/>
+<property name="outputBinding" value="taskform/hostsr"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="4" name="form_iscitrix" type="InputText" id="1753684474">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;iscitrix (form)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="taskform/iscitrix"/>
+<property name="outputBinding" value="taskform/iscitrix"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="5" name="form_isgeneral" type="InputText" id="570492074">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;isgeneral (form)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="taskform/isgeneral"/>
+<property name="outputBinding" value="taskform/isgeneral"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="6" name="form_ismgr" type="InputText" id="1926933163">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;ismgr (form)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="taskform/ismgr"/>
+<property name="outputBinding" value="taskform/ismgr"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="7" name="form_othermgr" type="InputText" id="2072276589">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;othermgr (form)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="taskform/othermgr"/>
+<property name="outputBinding" value="taskform/othermgr"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="8" name="form_reject" type="InputText" id="1794192427">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;reject (form)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="taskform/reject"/>
+<property name="outputBinding" value="taskform/reject"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="9" name="form_reply" type="InputText" id="613362568">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;reply (form)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="taskform/reply"/>
+<property name="outputBinding" value="taskform/reply"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="10" name="form_send" type="InputText" id="1397375950">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;send (form)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="taskform/send"/>
+<property name="outputBinding" value="taskform/send"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="11" name="form_stage1" type="InputText" id="689793569">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;stage1 (form)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="taskform/stage1"/>
+<property name="outputBinding" value="taskform/stage1"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="12" name="form_stage10" type="InputText" id="894782720">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;stage10 (form)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="taskform/stage10"/>
+<property name="outputBinding" value="taskform/stage10"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="13" name="form_stage11" type="InputText" id="1705113631">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;stage11 (form)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="taskform/stage11"/>
+<property name="outputBinding" value="taskform/stage11"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="14" name="form_stage2" type="InputText" id="702260067">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;stage2 (form)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="taskform/stage2"/>
+<property name="outputBinding" value="taskform/stage2"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="15" name="form_stage3" type="InputText" id="834417870">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;stage3 (form)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="taskform/stage3"/>
+<property name="outputBinding" value="taskform/stage3"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="16" name="form_stage4" type="InputText" id="940648226">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;stage4 (form)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="taskform/stage4"/>
+<property name="outputBinding" value="taskform/stage4"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="17" name="form_stage5" type="InputText" id="153720396">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;stage5 (form)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="taskform/stage5"/>
+<property name="outputBinding" value="taskform/stage5"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="18" name="form_stage6" type="InputText" id="903251148">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;stage6 (form)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="taskform/stage6"/>
+<property name="outputBinding" value="taskform/stage6"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="19" name="form_stage7" type="InputText" id="847422853">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;stage7 (form)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="taskform/stage7"/>
+<property name="outputBinding" value="taskform/stage7"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="20" name="form_stage8" type="InputText" id="1824931238">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;stage8 (form)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="taskform/stage8"/>
+<property name="outputBinding" value="taskform/stage8"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="21" name="form_stage9" type="InputText" id="1601179573">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;stage9 (form)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="taskform/stage9"/>
+<property name="outputBinding" value="taskform/stage9"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<dataHolder inputId="taskform" name="#0000A0" type="dataModelerEntry" outId="taskform" value="esunbank.com.tw.it03.form" id="form"/>
 </form>
